--- a/index.html
+++ b/index.html
@@ -1,2 +1,44 @@
-"Hello World"
+---
+layout: page
+title: Hi, My Name Is Jason Sun
+subtitle: Senior Software Engineer @ Tencent
+use-site-title: true
+---
+
+<h3>Short Bio</h3>
+<p>My name is Bao Sun, currently a senior software engineer @ Tencent.
+  My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>Aws</b>.
+</p>
+<p>
+Before that I was the team lead @SenseTime Research SCGRD SafeCity and worked with Rui Zhao <a href="https://scholar.google.com/citations?user=1c9oQNMAAAAJ&hl=en/">Senior Director Of Research at SCGRD, Sensetime</a>
+</p>
+<p>
+I obtained my Master of Electrical and Computer Engineering From University Of British Columbia in 2018
+</p>
+
+
+<h3>Tech Stack</h3>
+<ul>
+  <li><p>Languages: Java, Python, Golang, C++, Bash</p></li>
+  <li><p>Framework: Spring, Hibernate, Mybatis, Django, Bottle</p></li>
+  <li><p>Databases: Cassandra, MySql, HBase, AWS Aurora</p></li>
+  <li><p>Cloud Native: Kubernetes, Docker, Istio</p></li>
+  <li><p>Machine Learning: Tensorflow, Pytorch</p></li>
+  <li><p>Cloud Platform: Amazon Web Service</p></li>
+</ul>
+
+<h3>Professional Experience</h3>
+<ul>
+  <li><p>2019.12-Now: Senior Software Engineer @Tencent</p></li>
+  <li><p>2018.9-2019.12: Team Lead @Sensetime Research</p></li>
+  <li><p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p></li>
+  <li><p>2016.11-2017.11: Software Engineer Intern @Baidu US</p></li>
+  <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
+</ul>
+
+<h3>Education</h3>
+<ul>
+  <li><p>2015.7-2018.5 Master of Electrical and Computer Engineering @ University Of British Columba</p></li>
+</ul>
+
 
