--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Hi, My Name Is Jason Sun
+title: Bao Sun's Bio
 subtitle: Senior Software Engineer @ Tencent
 use-site-title: true
 ---
@@ -17,28 +17,43 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 </p>
 
 
-<h3>Tech Stack</h3>
-<ul>
-  <li><p>Languages: Java, Python, Golang, C++, Bash</p></li>
-  <li><p>Framework: Spring, Hibernate, Mybatis, Django, Bottle</p></li>
-  <li><p>Databases: Cassandra, MySql, HBase, AWS Aurora</p></li>
-  <li><p>Cloud Native: Kubernetes, Docker, Istio</p></li>
-  <li><p>Machine Learning: Tensorflow, Pytorch</p></li>
-  <li><p>Cloud Platform: Amazon Web Service</p></li>
-</ul>
 
 <h3>Professional Experience</h3>
-<ul>
-  <li><p>2019.12-Now: Senior Software Engineer @Tencent</p></li>
-  <li><p>2018.9-2019.12: Team Lead @Sensetime Research</p></li>
-  <li><p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p></li>
-  <li><p>2016.11-2017.11: Software Engineer Intern @Baidu US</p></li>
-  <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
-</ul>
+<p>
+  <ul>
+    <li><p>2019.12-Now: Senior Software Engineer @Tencent</p></li>
+    <li><p>2018.9-2019.12: Team Lead @Sensetime Research</p></li>
+    <li><p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p></li>
+    <li><p>2016.11-2017.11: Software Engineer Intern @Baidu US</p></li>
+    <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
+  </ul>
+</p>
 
-<h3>Education</h3>
-<ul>
-  <li><p>2015.7-2018.5 Master of Electrical and Computer Engineering @ University Of British Columba</p></li>
-</ul>
+ 
+<h3>Tech Stack</h3>
+<p>
+  <ul>
+    <li><p>Languages: Java, Python, Golang, C++, Bash</p></li>
+    <li><p>Framework: Spring, Hibernate, Mybatis, Django, Bottle</p></li>
+    <li><p>Databases: Cassandra, MySql, HBase, AWS Aurora</p></li>
+    <li><p>Cloud Native: Kubernetes, Docker, Istio</p></li>
+    <li><p>Machine Learning: Tensorflow, Pytorch</p></li>
+    <li><p>Cloud Platform: Amazon Web Service</p></li>
+  </ul>
+</p>
+
+<h3>Professional Certification</h3>
+<p>
+  <ul>
+    <li><p>ITIL V3 Foundation</p></li>
+  </ul>
+</p>
+
+<p>
+  <h3>Education</h3>
+  <ul>
+    <li><p>2015.7-2018.5 Master of Electrical and Computer Engineering @ University Of British Columba</p></li>
+  </ul>  
+</p>
 
 
