change to current job

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 ---
 layout: page
 title: Bao Sun's Bio
-subtitle: Senior Software Engineer @ Tencent
+subtitle: Team Lead @Sensetime Research
 use-site-title: true
 ---
 
 <h3>Short Bio</h3>
-<p>My name is Bao Sun, currently a senior software engineer @ Tencent.
+<p>My name is Bao Sun, currently Team Lead @Sensetime Research at SCGRD SafeCity
   My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>Aws</b>.
-</p>
-<p>
-Before that I was the team lead @SenseTime Research SCGRD SafeCity and worked with Rui Zhao <a href="https://scholar.google.com/citations?user=1c9oQNMAAAAJ&hl=en/">Senior Director Of Research at SCGRD, Sensetime</a>
 </p>
 <p>
 I obtained my Master of Electrical and Computer Engineering From University Of British Columbia in 2018
@@ -21,8 +18,7 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 <h3>Professional Experience</h3>
 <p>
   <ul>
-    <li><p>2019.12-Now: Senior Software Engineer @Tencent</p></li>
-    <li><p>2018.9-2019.12: Team Lead @Sensetime Research</p></li>
+    <li><p>2018.9-Now: Team Lead @Sensetime Research</p></li>
     <li><p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p></li>
     <li><p>2016.11-2017.11: Software Engineer Intern @Baidu US</p></li>
     <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
