--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 <p>
   <ul>
     <li><p>ITIL V3 Foundation</p></li>
+    <li><p>AWS Certified Solution Architect Associate </p></li>
   </ul>
 </p>
 
