adding aws study list

--- a/index.html
+++ b/index.html
@@ -53,4 +53,6 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
   </ul>  
 </p>
 
+<p><span><b>Last Update: Dec 2019</b></span></p>
+
 
