--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ use-site-title: true
 
 <h3>Short Bio</h3>
 <p>My name is Bao Sun, currently Team Lead @Sensetime Research at SCGRD SafeCity
-  My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>Aws</b>.
+  My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>AWS</b>.
 </p>
 <p>
 I obtained my Master of Electrical and Computer Engineering From University Of British Columbia in 2018
@@ -15,7 +15,7 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 
 
 
-<h3>Professional Experience</h3>
+<h4>Professional Experience</h4>
 <p>
   <ul>
     <li><p>2018.9-Now: Team Lead @Sensetime Research</p></li>
@@ -26,7 +26,7 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 </p>
 
  
-<h3>Tech Stack</h3>
+<h4>Tech Stack</h4>
 <p>
   <ul>
     <li><p>Languages: Java, Python, Golang, C++, Bash</p></li>
@@ -38,7 +38,7 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
   </ul>
 </p>
 
-<h3>Professional Certification</h3>
+<h4>Professional Certification</h4>
 <p>
   <ul>
     <li><p>ITIL V3 Foundation</p></li>
@@ -47,7 +47,7 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 </p>
 
 <p>
-  <h3>Education</h3>
+  <h4>Education</h4>
   <ul>
     <li><p>2015.7-2018.5 Master of Electrical and Computer Engineering @ University Of British Columba</p></li>
   </ul>  
