refactor html error

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,2 +1,43 @@
-
-
+<h1 id="selected-projects">Selected Projects</h1>
+<p>Here is the summary of projects that I have done</p>
+<h3 id="1-a-kubernetes-based-high-dimensional-feature-clustering-system">1. A Kubernetes-based High-Dimensional Feature Clustering System</h3>
+<p><em>Company</em>: Sensetime Research</p>
+<p><em>Duration</em>: Feb 2019 - Dec 2019</p>
+<p><em>Role</em>: Project Owner</p>
+<p><em>Team Size:</em> 5</p>
+<p><em>Contribution as project owner</em>: </p>
+<ol>
+<li>Requirement analysis &amp; cross functional team engagement</li>
+<li>Project goal definiation for technical &amp; business</li>
+<li>Delivery goal definiation and POC customer engagement for technical presales with named-account sales executive</li>
+<li>Defined R&amp;D roadmap &amp; timeline</li>
+</ol>
+<p><em>Contribution as Architect</em></p>
+<ol>
+<li>Defined development roadmap and system architecture </li>
+<li>Led and worked with other four engineers to iteratively worked on project from 0-1</li>
+<li>Translated reserach-side ideas into workable engineering SDKs</li>
+<li>Worked on core Kubernetes Spark clustering pipeline and relevant K8S development </li>
+</ol>
+<p><em>Buesiness Impact:</em></p>
+<p>  Delivered as the prototype for new version of billion-scale high-dimensional feature clustering system and merged into standard Sensetime platform project: Viper</p>
+<p><em>System Architecture</em>
+<img src="../upload/projects/pictures/ics.jpg" alt="System Architecture" title="System Architecture">
+<em>Clustered Result For Face Features</em>
+<img src="../upload/projects/pictures/ics-result.png" alt="Clustered Result For Face Features" title="Clustered Result For Face Features"></p>
+<h3 id="2-facial-feature-incremental-training-system">2. Facial Feature Incremental Training System</h3>
+<p><em>Company</em>: Sensetime Research</p>
+<p><em>Duration</em>: Oct 2018 - Feb 2019</p>
+<p><em>Role</em>: Developer</p>
+<p><em>Contribution as developer</em>: </p>
+<ol>
+<li>Engaged in system architecture design </li>
+<li>Conducted initial project POC analysis and engine, infra level component design </li>
+<li>One of the first three developers to start inital coding stage</li>
+</ol>
+<p><em>Buesiness Impact:</em></p>
+<p>  Project incubated into next version of Viper(<em>De Facto</em> Sensetime PaaS Platform standard component)</p>
+<p><em>System Architecture</em>
+<img src="../upload/projects/pictures/its.jpg" alt="System Architecture" title="System Architecture">
+<em>Major Pipeline</em>
+<img src="../upload/projects/pictures/its_pipeline.jpg" alt="Major Pipeline" title="Major Pipeline"></p>
