--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,6 +5,7 @@
 <p><em>Duration</em>: Feb 2019 - Dec 2019</p>
 <p><em>Role</em>: Project Owner</p>
 <p><em>Team Size:</em> 5</p>
+<p><em>Tech Stack:</em> Golang, Kubernetes, Docker, Python, Java, C++, Cassandra, HDFS, MySQL</p>
 <p><em>Contribution as project owner</em>: </p>
 <ol>
 <li>Requirement analysis &amp; cross functional team engagement</li>
@@ -21,14 +22,14 @@
 </ol>
 <p><em>Buesiness Impact:</em></p>
 <p>  Delivered as the prototype for new version of billion-scale high-dimensional feature clustering system and merged into standard Sensetime platform project: Viper</p>
-<p><em>System Architecture</em>
-<img src="../upload/projects/pictures/ics.jpg" alt="System Architecture" title="System Architecture">
-<em>Clustered Result For Face Features</em>
-<img src="../upload/projects/pictures/ics-result.png" alt="Clustered Result For Face Features" title="Clustered Result For Face Features"></p>
+<p>
+<img src="../upload/projects/pictures/ics.jpg" alt="System Architecture" title="System Architecture" width="400" height="400">
+<img src="../upload/projects/pictures/ics-result.png" alt="Clustered Result For Face Features" title="Clustered Result For Face Features" width="400" height="400"></p>
 <h3 id="2-facial-feature-incremental-training-system">2. Facial Feature Incremental Training System</h3>
 <p><em>Company</em>: Sensetime Research</p>
 <p><em>Duration</em>: Oct 2018 - Feb 2019</p>
 <p><em>Role</em>: Developer</p>
+<p><em>Tech Stack:</em> Golang, Docker, Python</p>
 <p><em>Contribution as developer</em>: </p>
 <ol>
 <li>Engaged in system architecture design </li>
@@ -37,7 +38,6 @@
 </ol>
 <p><em>Buesiness Impact:</em></p>
 <p>  Project incubated into next version of Viper(<em>De Facto</em> Sensetime PaaS Platform standard component)</p>
-<p><em>System Architecture</em>
-<img src="../upload/projects/pictures/its.jpg" alt="System Architecture" title="System Architecture">
-<em>Major Pipeline</em>
-<img src="../upload/projects/pictures/its_pipeline.jpg" alt="Major Pipeline" title="Major Pipeline"></p>
+<p>
+<img src="../upload/projects/pictures/its.jpg" alt="System Architecture" title="System Architecture" width="400" height="400">
+<img src="../upload/projects/pictures/its_pipeline.jpg" alt="Major Pipeline" title="Major Pipeline" width="400" height="400"></p>
