--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 ---
 layout: page
-title: Bao Sun's Bio
-subtitle: Team Lead @Sensetime Research
+title: Jason (Bao) Sun's Bio
+subtitle: Senior Software Engineer @Tencent
 use-site-title: true
 ---
 
 <h3>Short Bio</h3>
-<p>My name is Bao Sun, currently Team Lead @Sensetime Research at SCGRD SafeCity
+<p>My name is Bao Sun, currently a senior software engineer at PCG Platform Computing Group, working on platform system called Venus, which enables greater effiency and usage of AI pipeline for the entire PCG division.
+   My current work is about machine learning and recommendation system platform architecture
+   1. Feature Engineering Platform Dev Team Leading Developer & Project Manager
+   2. Model Management & Model Serving Platform Developer
   My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>AWS</b>.
 </p>
 <p>
-I obtained my Master of Electrical and Computer Engineering From University Of British Columbia in 2018
+I obtained my Master Degree of Electrical and Computer Engineering From University Of British Columbia in 2018 foucsing on software engineering and reliability system
 </p>
 
 
@@ -18,7 +21,8 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
 <h4>Professional Experience</h4>
 <p>
   <ul>
-    <li><p>2018.9-Now: Team Lead @Sensetime Research</p></li>
+    <li><p>2019.12-Now: Senior Software Engineer @Tencent</p></li>
+    <li><p>2018.9-2019.12: Team Lead @Sensetime Research</p></li>
     <li><p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p></li>
     <li><p>2016.11-2017.11: Software Engineer Intern @Baidu US</p></li>
     <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
@@ -53,6 +57,6 @@ I obtained my Master of Electrical and Computer Engineering From University Of B
   </ul>  
 </p>
 
-<p><span><b>Last Update: Dec 2019</b></span></p>
+<p><span><b>Last Update: Oct 2020</b></span></p>
 
 
