--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@ use-site-title: true
 
 <h3>Short Bio</h3>
 <p>My name is Bao Sun, currently a senior software engineer at PCG Platform Computing Group, working on platform system called Venus, which enables greater effiency and usage of AI pipeline for the entire PCG division.
-   My current work is about machine learning and recommendation system platform architecture
+</p><p>
+   My current work is about machine learning and recommendation system platform architecture development
    1. Feature Engineering Platform Dev Team Leading Developer & Project Manager
    2. Model Management & Model Serving Platform Developer
-  My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>AWS</b>.
-</p>
+  My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>AWS</b>.</p>
 <p>
 I obtained my Master Degree of Electrical and Computer Engineering From University Of British Columbia in 2018 foucsing on software engineering and reliability system
 </p>
-
-
 
 <h4>Professional Experience</h4>
 <p>
@@ -28,7 +26,6 @@ I obtained my Master Degree of Electrical and Computer Engineering From Universi
     <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
   </ul>
 </p>
-
  
 <h4>Tech Stack</h4>
 <p>
@@ -47,6 +44,7 @@ I obtained my Master Degree of Electrical and Computer Engineering From Universi
   <ul>
     <li><p>ITIL V3 Foundation</p></li>
     <li><p>AWS Certified Solution Architect Associate </p></li>
+    <li><p>AWS Certified Machine Learning Professional </p></li>
   </ul>
 </p>
 
