--- a/index.html
+++ b/index.html
@@ -6,53 +6,114 @@ use-site-title: true
 ---
 
 <h3>Short Bio</h3>
-<p>My name is Bao Sun, currently a senior software engineer at PCG Platform Computing Group, working on platform system called Venus, which enables greater effiency and usage of AI pipeline for the entire PCG division.
-</p><p>
-   My current work is about machine learning and recommendation system platform architecture development
-   1. Feature Engineering Platform Dev Team Leading Developer & Project Manager
-   2. Model Management & Model Serving Platform Developer
-  My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related trending technologies like <b>Kubernetes</b>, <b>AWS</b>.</p>
+<p>My name is Bao Sun, currently a senior software engineer at PCG Platform Computing Group, working on platform system
+    called Venus, which enables greater effiency and usage of AI pipeline for the entire PCG division.
+</p>
 <p>
-I obtained my Master Degree of Electrical and Computer Engineering From University Of British Columbia in 2018 foucsing on software engineering and reliability system
+    My current work is building the de-facto machine learning and recommendation system platform for PCG to support
+    bussiness <br>
+    Current work is building common feature engineering platform with several key stakeholders and acting as technical &
+    business focal point in daily development iteration, majoy responsibilities include:
+
+    <ol>
+        <li>
+            Feature Engineering Platform Dev Team Leading Developer & Project Manager
+        </li>
+        <li>
+            Model Management & Model Serving Platform Developer
+        </li>
+    </ol>
+
+
+    My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related
+    trending technologies like <b>Kubernetes</b>, <b>AWS</b>.
+    <br>
+    I have good knowledge and keen interest in the following areas:
+
+    <ol>
+        <li>
+            Recommendation System (engineering & algorithm)
+        </li>
+        <li>
+            Cloud computing (mainly on AI application)
+        </li>
+        <li>
+            Backend development (mainly in Java and Golang)
+        </li>
+    </ol>
+</p>
+<p>
+    I obtained my Master Degree of Electrical and Computer Engineering From University Of British Columbia in 2018
+    foucsing on software engineering and reliability system
 </p>
 
 <h4>Professional Experience</h4>
 <p>
-  <ul>
-    <li><p>2019.12-Now: Senior Software Engineer @Tencent</p></li>
-    <li><p>2018.9-2019.12: Team Lead @Sensetime Research</p></li>
-    <li><p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p></li>
-    <li><p>2016.11-2017.11: Software Engineer Intern @Baidu US</p></li>
-    <li><p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p></li>
-  </ul>
+    <ul>
+        <li>
+            <p>2019.12-Now: Senior Software Engineer @Tencent</p>
+        </li>
+        <li>
+            <p>2018.9-2019.12: Team Lead @Sensetime Research</p>
+        </li>
+        <li>
+            <p>2018.5-2018.9: Software Engineer @CA technologies(Now Acquired By Broadcom)</p>
+        </li>
+        <li>
+            <p>2016.11-2017.11: Software Engineer Intern @Baidu US</p>
+        </li>
+        <li>
+            <p>2015.9-2016.11: Research Assistant @Univeristy Of British Columbia</p>
+        </li>
+    </ul>
 </p>
- 
+
 <h4>Tech Stack</h4>
 <p>
-  <ul>
-    <li><p>Languages: Java, Python, Golang, C++, Bash</p></li>
-    <li><p>Framework: Spring, Hibernate, Mybatis, Django, Bottle</p></li>
-    <li><p>Databases: Cassandra, MySql, HBase, AWS Aurora</p></li>
-    <li><p>Cloud Native: Kubernetes, Docker, Istio</p></li>
-    <li><p>Machine Learning: Tensorflow, Pytorch</p></li>
-    <li><p>Cloud Platform: Amazon Web Service</p></li>
-  </ul>
+    <ul>
+        <li>
+            <p>Languages: Java, Python, Golang, C++, Bash</p>
+        </li>
+        <li>
+            <p>Framework: Spring, Hibernate, Mybatis, Django, Bottle</p>
+        </li>
+        <li>
+            <p>Databases: Cassandra, MySql, HBase, AWS Aurora</p>
+        </li>
+        <li>
+            <p>Cloud Native: Kubernetes, Docker, Istio</p>
+        </li>
+        <li>
+            <p>Machine Learning: Tensorflow, Pytorch</p>
+        </li>
+        <li>
+            <p>Cloud Platform: Amazon Web Service</p>
+        </li>
+    </ul>
 </p>
 
 <h4>Professional Certification</h4>
 <p>
-  <ul>
-    <li><p>ITIL V3 Foundation</p></li>
-    <li><p>AWS Certified Solution Architect Associate </p></li>
-    <li><p>AWS Certified Machine Learning Professional </p></li>
-  </ul>
+    <ul>
+        <li>
+            <p>ITIL V3 Foundation</p>
+        </li>
+        <li>
+            <p>AWS Certified Solution Architect Associate </p>
+        </li>
+        <li>
+            <p>AWS Certified Machine Learning Professional </p>
+        </li>
+    </ul>
 </p>
 
 <p>
-  <h4>Education</h4>
-  <ul>
-    <li><p>2015.7-2018.5 Master of Electrical and Computer Engineering @ University Of British Columba</p></li>
-  </ul>  
+    <h4>Education</h4>
+    <ul>
+        <li>
+            <p>2015.7-2018.5 Master of Electrical and Computer Engineering @ University Of British Columba</p>
+        </li>
+    </ul>
 </p>
 
 <p><span><b>Last Update: Oct 2020</b></span></p>
