--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ use-site-title: true
 </p>
 <p>
     My current work is building the de-facto machine learning and recommendation system platform for PCG to support
-    bussiness <br>
+    bussiness 
     Current work is building common feature engineering platform with several key stakeholders and acting as technical &
     business focal point in daily development iteration, majoy responsibilities include:
-
     <ol>
         <li>
             Feature Engineering Platform Dev Team Leading Developer & Project Manager
@@ -23,13 +22,9 @@ use-site-title: true
             Model Management & Model Serving Platform Developer
         </li>
     </ol>
-
-
     My current focus lies in platform/backend development at scale with great interests in middle PaaS and IaaS related
     trending technologies like <b>Kubernetes</b>, <b>AWS</b>.
-    <br>
     I have good knowledge and keen interest in the following areas:
-
     <ol>
         <li>
             Recommendation System (engineering & algorithm)
